--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="body">
 <div class="title">Case Converter</div>
 <label>
-        <textarea id="text" rows="19" cols="50">
+        <textarea id="text" rows="8" cols="43">
         </textarea>
 </label>
 <div class="button-case">
@@ -17,6 +18,7 @@
     <div class="flex-but"><button id="proper-case">Proper Case</button></div>
     <div class="flex-but"><button id="sentence-case">Sentence Case</button></div>
     <div class="flex-but"><button id="save-text-file">Save Text</button></div>
+</div>
 </div>
 <script src="script.js"></script>
 </body>
